--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
   </div>
   </td>
   <td style="vertical-align: top;">
-    <div id="bio"><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hi, my name is Belal Said.
+    <!--<div id="bio"><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hi, my name is Belal Said.
 I'm currently a student at Rutgers University-New Brunswick, pursuing a B.E. in <b>Mechanical Engineering</b> and a B.A. in <b>Computer Science</b>. I've had a passion for computer science and robots for as long as I remember, and I have had experience in the field for approximately 6 years.
 <br/>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I have specialized skills in <b>algorithm design</b>, <b>data extraction and analysis</b>, and <b>scientific programming</b>. Other skills include back-end server developement, hardware hacking, 3D design, machine tools and metalworking machinery. I've also been fortunate enough to put those skills to use in jobs and internships with numerous laboratories and established businesses.
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I have specialized skills in <b>algorithm design</b>, <b>data extraction and analysis</b>, and <b>scientific programming</b>. Other skills include back-end server developement, hardware hacking, 3D design, machine tools and metalworking machinery. I've also been fortunate enough to put those skills to use in jobs and internships with numerous laboratories and established businesses.-->
 </p>
 </div>
   </td>
