--- a/projects.html
+++ b/projects.html
@@ -14,6 +14,19 @@
   </ul>
   <div id="truebody">
    <div id="pcontainer">
+   <h2><a href="https://github.com/belalmksaid/PacBotCode" target="_blank">PacBot</a>  <a href="https://github.com/belalmksaid/PacBotCode" target="_blank"><img id="srcicon" src="github.png"/></a></h2>
+    <br/>
+    <div id="projectdisplay">
+      <img src="http://i.imgur.com/RwaHfIa.gif"></img>
+      <img src="http://i.imgur.com/aqs3Tid.jpg?1"></img>
+      <img src="http://i.imgur.com/3QY6oek.jpg?1"></img>
+    </div>
+    <br/>
+    <h3>
+    My first maze solving robot! Suprisingly, we won first place at the Harvard Competition. Unlike normal mazes, pacman maze has no "solution", it's a little more involved since we had to account for open loops. I also decided to implement the code on a teenysduino 3.2 instead of a <a href="https://www.raspberrypi.org/products/pi-zero/">Raspberry Pi Zero</a> which is at least 100 times more powerful.
+    </h3>
+    <br/>
+    <hr/>
    <h2><a href="PacmanAI/labratory.html?n=32&t=20" target="_blank">Pacman AI Labratory</a>  <a href="https://github.com/belalmksaid/PacmanAILab" target="_blank"><img id="srcicon" src="github.png"/></a></h2>
      <br/>
      <div id="projectdisplay">
