--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
    <h2><a href="https://github.com/belalmksaid/PacBotCode" target="_blank">PacBot</a>  <a href="https://github.com/belalmksaid/PacBotCode" target="_blank"><img id="srcicon" src="github.png"/></a></h2>
     <br/>
     <div id="projectdisplay">
-      <img src="http://i.imgur.com/RwaHfIa.gif"></img>
+      <img src="http://i.imgur.com/Gq17MO5.gif"></img>
       <img src="http://i.imgur.com/aqs3Tid.jpg?1"></img>
       <img src="http://i.imgur.com/3QY6oek.jpg?1"></img>
     </div>
