--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
     </div>
     <br/>
     <h3>
-    My first maze solving robot! Suprisingly, we won first place at the Harvard Competition. Unlike normal mazes, pacman maze has no "solution", it's a little more involved since we had to account for open loops. I also decided to implement the code on a teenysduino 3.2 instead of a <a href="https://www.raspberrypi.org/products/pi-zero/">Raspberry Pi Zero</a> which is at least 100 times more powerful.
+    A maze solving robot for Harvard PacBot Competition 2017. Suprisingly, we won first place. Unlike normal mazes, pacman maze has no "solution", it's a little more involved since we had to account for open loops. I also decided to implement the code on a teenysduino 3.2 instead of a <a href="https://www.raspberrypi.org/products/pi-zero/">Raspberry Pi Zero</a> which is at least 100 times more powerful.
     </h3>
     <br/>
     <hr/>
