--- a/resume.html
+++ b/resume.html
@@ -10,10 +10,24 @@
 <ul id="barmenu">
   <li><a href="index.html">Home</a></li>
   <li><a href="projects.html">Projects</a></li>
-  <li><a class="active" href="resume.html">Resume</a></li>
+  <li><a class="active" href="resume.html" target="_blank">Resume</a></li>
 </ul>
 <div id="truebody">
- <embed src="resume.pdf" width="800px" height="1000px" style="display: block;margin-left:auto; margin-right: auto;"/>
- </div>
+ <br/>
+<table style="margin-left: auto; margin-right: auto; vertical-align: top;">
+<tr>
+	<td>
+		<center><a href="BelalSaidResumeCS.pdf">PDF File</a></center>
+	</td>
+</tr>
+<tr>
+  <td  style="vertical-align: top;">
+     <iframe style="margin-left: auto; margin-right: auto; vertical-align: top; overflow-x: hidden;" src="BelalSaidResumeCS.html/BelalSaidResumeCS.html" width="625" height="820"></iframe>
+
+  </td>
+</tr></table>
+
+ 
+  </div>
 </body>
 </html>
