--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					</li>
 					<br/>
 					<li>
-						<a href="BelalSaidResumeCS.pdf">R&#233;sum&#233;</a>
+						<a href="BelalSaidResumeCS.pdf" traget="_blank">R&#233;sum&#233;</a>
 					</li>
 				</ul>
 			</td>
