added second project

--- a/projects.html
+++ b/projects.html
@@ -6,13 +6,13 @@
 	<script src="disquemath.js"></script>
 	<script src="core.js"></script>
 	<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-98293275-1', 'auto');
-  ga('send', 'pageview');
+		ga('create', 'UA-98293275-1', 'auto');
+		ga('send', 'pageview');
 
 	</script>
 	<style>
@@ -41,7 +41,18 @@
 			<h3>
 				A maze solving robot for Harvard PacBot Competition 2017. Suprisingly, we won first place. Unlike normal mazes, pacman maze has no "solution", it's a little more involved since we had to account for open loops. I also decided to implement the code on a teenysduino 3.2 instead of a <a href="https://www.raspberrypi.org/products/pi-zero/">Raspberry Pi Zero</a> which is at least 100 times more powerful.
 			</h3>
+		</div>
+		<div class="projectPoster">
+			<h1><a href="PacmanAI/labratory.html?n=32&t=20" target="_blank">Pacman AI Labratory</a>  <a href="https://github.com/belalmksaid/PacmanAILab" target="_blank"><img class="srcicon" src="images/github.png"/></a></h1>
 			<br/>
+			<div class="projectdisplay">
+				<img src="http://i.imgur.com/MAroA7i.jpg"></img>
+				<img src="http://i.imgur.com/SQzt3vr.jpg"></img>
+				<img src="http://i.imgur.com/oDA66FY.jpg"></img>
+			</div>
+			<br/>
+			<h3>Watch as an AI learns how to play Pacman. It takes over 30 generations before any interesting behavior arises.
+			</h3>
 		</div>
 	</div>
 </div>
