remove resume temp

--- a/projects.html
+++ b/projects.html
@@ -30,6 +30,17 @@
 <div id="realbody">
 	<div id="posters">
 		<div class="projectPoster">
+		<h1><a href="https://grabcad.com/library/music-box-in-a-piano-1" target="_blank">Music Box Animation and Render</a></h1>
+		<br/>
+			<div class="projectdisplay">
+				<iframe src="https://www.youtube.com/embed/-2dWcMpG0eE" frameborder="0" allowfullscreen></iframe>
+				<img src="https://d2t1xqejof9utc.cloudfront.net/screenshots/pics/95e15253cfd4ad57acf76901057a8dad/large.JPG"/>
+				<img src="https://d2t1xqejof9utc.cloudfront.net/screenshots/pics/952f4e56f32c58386a18349fd50b0548/large.JPG"/>
+			</div>
+			<br/>
+			<h3></h3>
+		</div>
+		<div class="projectPoster">
 			<h1><a href="https://github.com/belalmksaid/PacBotCode" target="_blank">PacBot</a>  <a href="https://github.com/belalmksaid/PacBotCode" target="_blank"><img class="srcicon" src="images/github.png"/></a></h1>
 			<br/>
 			<div class="projectdisplay">
