update home page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					</li>
 				</ul>
 			</td>
-			<td><img id="profile" src="images/profile.png"/></td>
+			<td><a href="javascript:createBlackHole();"><img id="profile" src="images/profile.png"/></td></a>
 			<td>
 				<ul style="text-align: left">
 					<li>
@@ -43,14 +43,14 @@
 					</li>
 					<br/>
 					<li>
-					<a href="javascript:createBlackHole();">Blackhole</a>
+					<a href="http://exp.belalsaid.com">Experiment</a>
 					</li>
 				</ul>
 			</td>
 		</tr>
 			<tr>
 				<td  style="vertical-align: top;" colspan="3">
-					<center><h1 id="intro">Belal M. K. Said</h1></center>  
+					<center><h1 id="intro">Belal M. K. Said</h1></center>
 					<center><h3 id="blurb">Engineer, Software Developer, <br/> Future Robot Overlord<sup style="font-size: 10px;">TM</sup></h3></center>
 					<div id="smedia">
 						<a href="mailto:belalmksaid@gmail.com"><img src="images/email.png"/></a>
