update main page

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 <body>
 	<canvas id="background"></canvas>
 	<div id="realbody">
-		<table id="prof" style="margin-left: auto; margin-right: auto; vertical-align: top;">
+		<table id="prof" style="vertical-align: top; text-align: center;">
 		<tr id="sidelist">
-			<td>
-				<ul style="text-align: right">
+			<td style="width: 30%">
+				<ul style="text-align: left;">
 					<li>
 						<a href="index.html">Home</a>
 					</li>
@@ -36,8 +36,8 @@
 				</ul>
 			</td>
 			<td><a href="javascript:createBlackHole();"><img id="profile" src="images/profile.png"/></td></a>
-			<td>
-				<ul style="text-align: left">
+			<td style="width: 30%">
+				<ul style="text-align: right;">
 					<li>
 						<a href="projects.html">Projects</a>
 					</li>
@@ -52,6 +52,7 @@
 				<td  style="vertical-align: top;" colspan="3">
 					<center><h1 id="intro">Belal M. K. Said</h1></center>
 					<center><h3 id="blurb">Engineer, Software Developer, <br/> Future Robot Overlord<sup style="font-size: 10px;">TM</sup></h3></center>
+					<br/>
 					<div id="smedia">
 						<a href="mailto:belalmksaid@gmail.com"><img src="images/email.png"/></a>
 						<a href="https://www.linkedin.com/in/belalmsaid"><img src="images/linkedin.png"/></a>
