--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
 	</style>
 </head>
 <body>
-	<canvas id="background">
-		
-	</canvas>
+	<canvas id="background"></canvas>
 	<div id="realbody">
 		<table id="prof" style="vertical-align: top; text-align: center;">
 		<tr id="sidelist">
