fix padding attemp

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 	<canvas id="background"></canvas>
 	<div id="realbody">
-		<table id="prof" style="vertical-align: top; text-align: center;">
+		<table id="prof" style="vertical-align: top; text-align: center; padding: 20px">
 		<tr id="sidelist">
 			<td style="width: 30%">
 				<ul style="text-align: left;">
