commit keybinding tested

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 	</style>
 </head>
 <body>
-	<canvas id="background"></canvas>
+	<canvas id="background">
+		
+	</canvas>
 	<div id="realbody">
 		<table id="prof" style="vertical-align: top; text-align: center; padding: 20px">
 		<tr id="sidelist">
