create projects folder

--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
 			</h3>
 		</div>
 		<div class="projectPoster">
-			<h1><a href="PacmanAI/labratory.html?n=32&t=20" target="_blank">Pacman AI Labratory</a>  <a href="https://github.com/belalmksaid/PacmanAILab" target="_blank"><img class="srcicon" src="images/github.png"/></a></h1>
+			<h1><a href="projects/PacmanAI/labratory.html?n=32&t=20" target="_blank">Pacman AI Labratory</a>  <a href="https://github.com/belalmksaid/PacmanAILab" target="_blank"><img class="srcicon" src="images/github.png"/></a></h1>
 			<br/>
 			<div class="projectdisplay">
 				<img src="http://i.imgur.com/MAroA7i.jpg"></img>
