--- a/projects/MineSweeper/game.html
+++ b/projects/MineSweeper/game.html
@@ -1,9 +1,17 @@
 <html>
     <head>
+        <script src="/jquery.js"></script>
         <script src="/disquemath.js"></script>
+        <script src="neuralnetwork.js"></script>
         <script src="game.js"></script> 
+        <style>
+            #sandbox {
+                width: 100%;
+                height: 100%;
+            }
+        </style>
     </head>
     <body>
-
+        <canvas id="sandbox"></canvas>
     </body>
 </html>
