--- a/projects/MineSweeper/game.html
+++ b/projects/MineSweeper/game.html
@@ -5,6 +5,12 @@
         <script src="neuralnetwork.js"></script>
         <script src="game.js"></script> 
         <style>
+            html * {
+	            margin: 0px; 
+	            padding: 0px;
+	            font-family: 'Open Sans', sans-serif;
+	            font-weight: 100;
+            }
             #sandbox {
                 width: 100%;
                 height: 100%;
