--- a/projects/MineSweeper/game.html
+++ b/projects/MineSweeper/game.html
@@ -13,11 +13,23 @@
             }
             #sandbox {
                 width: 100%;
-                height: 100%;
+                min-width: 800px;
             }
         </style>
     </head>
     <body>
         <canvas id="sandbox"></canvas>
+        <script>
+            C = sandbox.getContext('2d');
+            black = new color(0, 0, 0);
+            var pellets = new Array();
+            for(let i = 0; i < 50; i++) {
+                pellets.push(new pellet(v(Disque.random(0, sandbox.width), Disque.random(0, sandbox.height), 25, black)));
+            }
+            function loop() {
+                window.requestAnimationFrame(loop);
+            }
+            window.requestAnimationFrame(loop);
+        </script>
     </body>
 </html>
