--- a/projects/MineSweeper/game.html
+++ b/projects/MineSweeper/game.html
@@ -24,8 +24,15 @@
             black = new color(0, 0, 0);
             var pellets = new Array();
             for(let i = 0; i < 50; i++) {
-                pellets.push(new pellet(v(Disque.random(0, sandbox.width), Disque.random(0, sandbox.height), 25, black)));
+                pellets.push(new pellet(v(Disque.random(0, sandbox.width), Disque.random(0, sandbox.height)), 25, black));
             }
+
+            function drawPellets() {
+                for(let i = 0; i < pellets.length; i++) {
+                    pellets[i].draw(C);
+                }
+            }
+
             function loop() {
                 window.requestAnimationFrame(loop);
             }
