draw pellets fix

--- a/projects/MineSweeper/game.html
+++ b/projects/MineSweeper/game.html
@@ -34,6 +34,8 @@
             }
 
             function loop() {
+                C.clearRect(0, 0, sandbox.width, sandbox.height);
+                drawPellets();
                 window.requestAnimationFrame(loop);
             }
             window.requestAnimationFrame(loop);
