--- a/projects/MineSweeper/game.html
+++ b/projects/MineSweeper/game.html
@@ -29,6 +29,7 @@
                 }
                 for(let i = 0; i < 20; i++) {
                     universe.sweepers.push(new sweeper(v(Disque.random(0, sandbox.width), Disque.random(0, sandbox.height)), Disque.random(0, 2 * Math.PI), 0, 8));
+                    universe.genepool.genes.push(new gene(universe.sweepers[i].brain.getWeights(), 0));
                 }
             });
             
