add epochization every 60 sec

--- a/projects/MineSweeper/game.html
+++ b/projects/MineSweeper/game.html
@@ -39,6 +39,11 @@
                 window.requestAnimationFrame(loop);
             }
             window.requestAnimationFrame(loop);
+
+            window.setInterval(function() {
+                universe.evolve();
+            }, 60000);
+
         </script>
     </body>
 </html>
