--- a/projects.html
+++ b/projects.html
@@ -30,6 +30,15 @@
 <div id="realbody">
 	<div id="posters">
 		<div class="projectPoster">
+		<h1><a href="https://github.com/belalmksaid/comiccolorizer/" target="_blank">Comics Colorization with TensorFlow</a>  <a href="https://github.com/belalmksaid/comiccolorizer/" target="_blank"><img class="srcicon" src="images/github.png"/></a></h1>
+		<br/>
+			<div class="projectdisplay">
+				<img src="https://github.com/belalmksaid/comiccolorizer/raw/master/summary/6000_0.jpg?raw=true"/>
+			</div>
+			<br/>
+			<h3></h3>
+		</div>
+		<div class="projectPoster">
 		<h1><a href="https://grabcad.com/library/music-box-in-a-piano-1" target="_blank">Music Box Animation and Render</a></h1>
 		<br/>
 			<div class="projectdisplay">
