update css and add project

--- a/projects.html
+++ b/projects.html
@@ -34,6 +34,7 @@
 		<br/>
 			<div class="projectdisplay">
 				<img src="https://github.com/belalmksaid/comiccolorizer/raw/master/summary/6000_0.jpg?raw=true"/>
+				<img src="https://github.com/belalmksaid/comiccolorizer/raw/master/summary/11000_0.jpg?raw=true"/>
 			</div>
 			<br/>
 			<h3></h3>
