--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<tr>
 				<td  style="vertical-align: top;" colspan="3">
 					<center><h1 id="intro">Belal M. K. Said</h1></center>
-					<center><h3 id="blurb">Engineer, Software Developer, <br/> Future Robot Overlord<sup style="font-size: 10px;">TM</sup></h3></center>
+					<center><h3 id="blurb">Robotics Engineer, Software Developer</h3></center>
 					<br/>
 					<div id="smedia">
 						<a href="mailto:belalmksaid@gmail.com"><img src="images/email.png"/></a>
