update facebook url

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<div id="smedia">
 						<a href="mailto:belalmksaid@gmail.com"><img src="images/email.png"/></a>
 						<a href="https://www.linkedin.com/in/belalmsaid"><img src="images/linkedin.png"/></a>
-						<a href="https://www.facebook.com/belos.mostafa"><img src="images/facebook.png"/></a>
+						<a href="https://www.facebook.com/belalmksaid"><img src="images/facebook.png"/></a>
 						<a href="https://github.com/belalmksaid"><img src="images/github.png"/></a>
 					</div>
 				</td>
