remove experiment url

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					</li>
 					<br/>
 					<li>
-					<a href="http://exp.belalsaid.com">Experiment</a>
+					<a>Experiment</a>
 					</li>
 				</ul>
 			</td>
