--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
 <div id="realbody">
 	<div id="posters">
 		<div class="projectPoster">
-		<h1><a href="https://github.com/belalmksaid/comiccolorizer/" target="_blank">Comics Colorization with TensorFlow</a>  <a href="https://github.com/belalmksaid/comiccolorizer/" target="_blank"><img class="srcicon" src="images/github.png"/></a></h1>
+		<h1><a href="https://github.com/belalmksaid/comiccolorizer/" target="_blank">Colorizing Comics using Deep CNNs in TensorFlow</a>  <a href="https://github.com/belalmksaid/comiccolorizer/" target="_blank"><img class="srcicon" src="images/github.png"/></a></h1>
 		<br/>
 			<div class="projectdisplay">
 				<img src="https://github.com/belalmksaid/comiccolorizer/raw/master/summary/6000_0.jpg?raw=true"/>
