--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					</li>
 					<br/>
 					<li>
-					<a>Experiment</a>
+					<a href="http://minesweeper.belalsaid.com">Experiment</a>
 					</li>
 				</ul>
 			</td>
@@ -54,7 +54,7 @@
 			<tr>
 				<td  style="vertical-align: top;" colspan="3">
 					<center><h1 id="intro">Belal M. K. Said</h1></center>
-					<center><h3 id="blurb">Robotics Engineer, Software Developer</h3></center>
+					<center><h3 id="blurb">Software Developer: Jack of All Trades, Master of Some</h3></center>
 					<br/>
 					<div id="smedia">
 						<a href="mailto:belalmksaid@gmail.com"><img src="images/email.png"/></a>
