--- a/projects/whiteboard/board.html
+++ b/projects/whiteboard/board.html
@@ -2,6 +2,8 @@
 
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="http://belalsaid.com/disquemath.js"></script>
+    <script src="whiteboard.js"></script>
     <style>
         body {
             margin: 0px;
@@ -65,6 +67,20 @@
 
             function pick(method) {
             }
+
+            function getMousePos(canvas, evt) {
+                var rect = canvas.getBoundingClientRect();
+                return v(evt.clientX - rect.left, evt.clientY - rect.top);
+            }
+
+            let board = new whiteboard(sandbox.getContext('2d'), sandbox);
+            sandbox.addEventListener('mousemove', function (evt) {
+                board.mousePos = getMousePos(sandbox, evt);
+            }, false);
+            setInterval(function () {
+                board.update();
+                board.draw();
+            }, 1000 / 60);
         </script>
     </div>
 </body>
