--- a/projects/whiteboard/board.html
+++ b/projects/whiteboard/board.html
@@ -78,6 +78,7 @@
                 board.mousePos = getMousePos(sandbox, evt);
             }, false);
             sandbox.addEventListener('touchmove', function (evt) {
+                alert("wtf");
                 board.mousePos = getMousePos(sandbox, evt);
             }, false);
             setInterval(function () {
