--- a/projects/whiteboard/board.html
+++ b/projects/whiteboard/board.html
@@ -66,6 +66,7 @@
             });
 
             function pick(method) {
+                board.mode = method;
             }
 
             function getMousePos(canvas, evt) {
@@ -74,15 +75,22 @@
             }
 
             let board = new whiteboard(sandbox.getContext('2d'), sandbox);
+            sandbox.addEventListener('mousedown', function(evt) {
+                board.mousedown();
+            }, false);
+            sandbox.addEventListener('touchdown', function(evt) {
+                board.mousedown();
+            }, false);
             sandbox.addEventListener('mousemove', function (evt) {
                 board.mousePos = getMousePos(sandbox, evt);
+                board.draw();
             }, false);
             sandbox.addEventListener('touchmove', function (evt) {
                 board.mousePos = getMousePos(sandbox, evt.touches[0]);
+                board.draw();
             }, false);
             setInterval(function () {
                 board.update();
-                board.draw();
             }, 1000 / 60);
         </script>
     </div>
