fix pull refresh prevent

--- a/projects/whiteboard/board.html
+++ b/projects/whiteboard/board.html
@@ -60,8 +60,12 @@
             </div>
         </div>
         <script>
-            document.addEventListener('touchstart', touchstartHandler, {passive: false});
-            document.addEventListener('touchmove', touchmoveHandler, {passive: false});
+            
+            function pdefault(e) {
+                e.preventDefault();
+            }
+
+            document.addEventListener('touchmove', pdefault, {passive: false});
             $(window).on('resize load', function () {
                 sandbox.width = cont.offsetWidth;
                 sandbox.height = cont.offsetHeight - 100;
