add blog and feed

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					</li>
 					<br/>
 					<li>
-					<a href="http://minesweeper.belalsaid.com">Experiment</a>
+					<a href="blog.html">Blog</a>
 					</li>
 				</ul>
 			</td>
