--- a/projects.html
+++ b/projects.html
@@ -23,6 +23,7 @@
 	<canvas id="background"></canvas>
 	<div id="navbar">
 		<a href="index.html">Home</a> / 
+		<a href="blog.html">Blog</a> / 
 		<a href="projects.html">Projects</a> / 
 		<a href="BelalSaidResumeCS.pdf" target="_blank">R&#233;sum&#233;</a>
 	</ul>
