--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
 	<title>Belal M.K. Said</title>
 	<link rel="stylesheet" type="text/css" href="core.css" media="screen" />
@@ -7,64 +8,84 @@
 	<script src="disquemath.js"></script>
 	<script src="core.js"></script>
 	<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+		(function (i, s, o, g, r, a, m) {
+		i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+			(i[r].q = i[r].q || []).push(arguments)
+		}, i[r].l = 1 * new Date(); a = s.createElement(o),
+			m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-98293275-1', 'auto');
-  ga('send', 'pageview');
+		ga('create', 'UA-98293275-1', 'auto');
+		ga('send', 'pageview');
 
 	</script>
 	<style>
-
 	</style>
 </head>
+
 <body>
 	<canvas id="background">
-		
+
 	</canvas>
 	<div id="realbody">
 		<table id="prof" style="vertical-align: top; text-align: center; padding: 20px">
-		<tr id="sidelist">
-			<td style="width: 30%">
-				<ul style="text-align: left;">
-					<li>
-						<a href="index.html">Home</a>
-					</li>
-					<br/>
-					<li>
-						<a href="BelalSaidResumeCS.pdf" target="_blank">R&#233;sum&#233;</a>
-					</li>
-				</ul>
-			</td>
-			<td><a href="javascript:createBlackHole();"><img id="profile" src="images/profile.png"/></td></a>
-			<td style="width: 30%">
-				<ul style="text-align: right;">
-					<li>
-						<a href="projects.html">Projects</a>
-					</li>
-					<br/>
-					<li>
-					<a href="blog.html">Blog</a>
-					</li>
-				</ul>
-			</td>
-		</tr>
+			<tr id="sidelist">
+				<td style="width: 30%">
+					<ul style="text-align: left;">
+						<li>
+							<a href="index.html">Home</a>
+						</li>
+						<br/>
+						<li>
+							<a href="BelalSaidResumeCS.pdf" target="_blank">R&#233;sum&#233;</a>
+						</li>
+					</ul>
+				</td>
+				<td>
+					<a href="javascript:createBlackHole();">
+						<img id="profile" src="images/profile.png" />
+				</td>
+				</a>
+				<td style="width: 30%">
+					<ul style="text-align: right;">
+						<li>
+							<a href="blog.html">Blog</a>
+						</li>
+
+						<br/>
+						<li>
+							<a href="projects.html">Projects</a>
+						</li>
+					</ul>
+				</td>
+			</tr>
 			<tr>
-				<td  style="vertical-align: top;" colspan="3">
-					<center><h1 id="intro">Belal M. K. Said</h1></center>
-					<center><h3 id="blurb">Software Developer: Jack of All Trades, Master of Some</h3></center>
+				<td style="vertical-align: top;" colspan="3">
+					<center>
+						<h1 id="intro">Belal M. K. Said</h1>
+					</center>
+					<center>
+						<h3 id="blurb">Software Developer: Jack of All Trades, Master of Some</h3>
+					</center>
 					<br/>
 					<div id="smedia">
-						<a href="mailto:belalmksaid@gmail.com"><img src="images/email.png"/></a>
-						<a href="https://www.linkedin.com/in/belalmsaid"><img src="images/linkedin.png"/></a>
-						<a href="https://www.facebook.com/belalmksaid"><img src="images/facebook.png"/></a>
-						<a href="https://github.com/belalmksaid"><img src="images/github.png"/></a>
+						<a href="mailto:belalmksaid@gmail.com">
+							<img src="images/email.png" />
+						</a>
+						<a href="https://www.linkedin.com/in/belalmsaid">
+							<img src="images/linkedin.png" />
+						</a>
+						<a href="https://www.facebook.com/belalmksaid">
+							<img src="images/facebook.png" />
+						</a>
+						<a href="https://github.com/belalmksaid">
+							<img src="images/github.png" />
+						</a>
 					</div>
 				</td>
 			</tr>
 		</table>
 	</div>
 </body>
+
 </html>
